--- a/AndFlmsg_Head_CPP/project.properties
+++ b/AndFlmsg_Head_CPP/project.properties
@@ -10,6 +10,6 @@
 # Project target.
 target=android-21
 android.library=false
-android.library.reference.1=..\\\\..\\\\..\\\\..\\\\Program Files\\\\Android\\\\android-sdk\\\\extras\\\\android\\\\support\\\\v7\\\\appcompat
-android.library.reference.2=../aFileDialog
 
+android.library.reference.1=../aFileDialog
+android.library.reference.2=../android-support-v7-appcompat
