--- a/AndFlmsg_Head_CPP/AndroidManifest.xml
+++ b/AndFlmsg_Head_CPP/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.AndFlmsg"
       android:versionCode="1"
-      android:versionName="1.2.0RC5" xmlns:android="http://schemas.android.com/apk/res/android">
+      android:versionName="1.2.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="21"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
