--- a/AndFlmsg_Head_CPP/project.properties
+++ b/AndFlmsg_Head_CPP/project.properties
@@ -11,5 +11,5 @@
 target=android-21
 android.library=false
 
-android.library.reference.1=../aFileDialog
+android.library.reference.1=..\\aFileDialog
 android.library.reference.2=../android-support-v7-appcompat
