--- a/AndFlmsg_Head_CPP/build.gradle
+++ b/AndFlmsg_Head_CPP/build.gradle
@@ -13,8 +13,7 @@ android {
             ndkBuild {
                 // Specifies the ABI configurations of your native
                 // libraries Gradle should build and package with your APK.
-                abiFilters 'x86', 'x86_64', 'armeabi', 'armeabi-v7a',
-                        'arm64-v8a'
+                abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
                 cFlags "-DHAVE_STRCASESTR", "-DHAVE_UNSETENV", "-Ifldigi/include"
             }
         }
